# socker_strategy

./: .env  .env.sample  CLAUDE.md  README.md  api.py  main.py  pyproject.toml  requirements.txt
sample/: practice_menu-pass.xlsx  practice_menu-shoot.xlsx  practice_menu.xlsx
src/: __init__.py  agent.py  excel_generator.py  image_composer.py  llm_client.py
static/: index.html
